resolved fdo#56772 keep track of HTML ON/OFF tokens

Regression introduced with 11cbcb8b08b540b144a5df744e9fba0b6ba8144a
followed by 56d6589368c2e88cffec0c2e518f7c90863eeae6

Deep from svtools/source/svhtml/parhtml.cxx HTMLParser::_GetNextToken()
only a HTML_TABLEDATA_OFF was generated for <td .../> without a matching
HTML_TABLEDATA_ON (actually same for all <XXX/> ON/OFF tokens). This
confuses a state machine that doesn't keep track of such unexpected
closures and also expects all attributes of an element at an ON token.
Only the parser knows this is actually one token but needs to generate
separate ON/OFF tokens.

These bugs mentioned in the original code and commits are still fixed
with this change:
https://bugs.freedesktop.org/show_bug.cgi?id=34666
https://bugs.freedesktop.org/show_bug.cgi?id=36080
https://bugs.freedesktop.org/show_bug.cgi?id=36390

Change-Id: I2b3190d297a35ee3dfda95f9a4841f7c53ed4a92
(cherry picked from commit bb7360ca9929e9b395b3c903f460c9ed5efdce4d)
Reviewed-on: https://gerrit.libreoffice.org/3925
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>